fix: fix popup squishing (#73)

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -2,6 +2,10 @@
 @import url('~tabulator-tables/dist/css/tabulator.min.css');
 @import "style.css";
 
+body {
+    min-width: fit-content;
+}
+
 .status {
     font-weight: bold;
 }
